--- a/index.html
+++ b/index.html
@@ -651,10 +651,10 @@
         </div>
     </div>
 
-<footer id="contacto">
+    <footer id="contacto">
         <div class="footer-content">
             <div class="footer-section">
-                <h3>TRIQUETA</h3>
+                <h3>ARTILUGIOS</h3>
                 <p>Portal místico de sabiduría ancestral. Conectando lo terrenal con lo divino desde tiempos inmemoriales.</p>
             </div>
             <div class="footer-section">
