--- a/index.html
+++ b/index.html
@@ -564,6 +564,13 @@
 .hero-logo.reappearing {
     animation: logoReappear 1.5s ease-out forwards, heartbeatGlow 4s ease-in-out 1.5s infinite !important;
 }
+html {
+    overflow-x: hidden;
+}
+
+#hero {
+    overflow: hidden;  /* ← Contener la explosión dentro del hero */
+}
 
     </style>
 </head>
