--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ html {
     right: 0;
     background: rgba(10, 10, 10, 0.9);
     backdrop-filter: blur(8px);
-    border-bottom: 1px solid rgba(212, 175, 55, 0.2);
+    /* border-bottom: 1px solid rgba(212, 175, 55, 0.2); */ 
     padding: 20px 40px;
     z-index: 999;
     text-align: center;
@@ -640,6 +640,7 @@ html {
 
 <!-- AGREGAR ESTO NUEVO -->
 <section class="header-subtitle">
+    <h2>Proyecto vivo</h2>
     <p>Portal místico de sabiduría ancestral. Conectando lo terrenal con lo divino </p>
 </section>
 
