--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ html {
         <img src="sol.png" alt="Símbolo del Sol" class="hero-symbol" id="sol" />
         <img src="luna.png" alt="Símbolo de la Luna" class="hero-symbol" id="luna" />
         
-        <button class="triqueta-btn" id="btn-norte">🌙</button>
+        <button class="triqueta-btn" id="btn-norte">🕯️</button>
         <button class="triqueta-btn" id="btn-oeste">🔮</button>
         <button class="triqueta-btn" id="btn-este">🌿</button>
     </div>
