--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@ html {
 </div>
 </div>
 <button class="music-toggle" id="musicBtn">
-    <i class="fas fa-volume-mute"></i>
+    <i class="fas fa-volume-up"></i>
 </button>
     <footer id="contacto">
         <div class="footer-content">
