--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
 <meta property="og:title" content="Artilugios - Proyecto Vivo">
 <meta property="og:description" content="Portal místico de sabiduría ancestral. Santería, Vivero y Oráculo. Conectando lo terrenal con lo divino.">
-<meta property="og:image" content="https://artilugios.vercel.app/logo.png">
+<meta property="og:image" content="https://artilugios.vercel.app/logo.jpg">
 <meta property="og:url" content="https://artilugios.vercel.app">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Artilugios">
@@ -23,7 +23,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Artilugios - Proyecto Vivo">
 <meta name="twitter:description" content="Portal místico de sabiduría ancestral. Santería, Vivero y Oráculo.">
-<meta name="twitter:image" content="https://artilugios.vercel.app/logo.png">
+<meta name="twitter:image" content="https://artilugios.vercel.app/logo.jpg">
 
 <!-- Tema del navegador -->
 <meta name="theme-color" content="#d4af37">
