--- a/index.html
+++ b/index.html
@@ -996,8 +996,8 @@ html {
             <ul class="nav-links" id="navLinks">
     <li><a href="index.html">INICIO</a></li>
     <li><a href="santeria.html">SANTERÍA</a></li>
-    <li><a href="#vivero">VIVERO</a></li>
-    <li><a href="#oraculo">ORÁCULO</a></li>
+    <li><a href="vivero.html">VIVERO</a></li>
+    <li><a href="oraculo.html">ORÁCULO</a></li>
     <li><a href="#contacto">CONTACTO</a></li>
 </ul>
         </nav>
